--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,11 @@
 .fa{
 	background-color: 
 }
+.video{
+	width: 100%;
+}
+.foim{
+	background-image: url("../image/banner.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
