--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
 	background-image: url("../image/large.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	padding: 1%;
+}
+.enc{
+	padding: 10%;
+	color: red;
 }
 .texim{
 	display: inline-block;
@@ -32,7 +37,7 @@
 	display: block;
 	position: relative;
 	border-radius: 50%;
-	padding: 1%;
+	padding: 2%;
 	background-color: #0369B9;
 	margin-left: 90%;
 	margin-top: 10%;
