--- a/css/main.css
+++ b/css/main.css
@@ -9,17 +9,17 @@
 	background-image: url("../image/large.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
-	padding: 1%;
-}
-.enc{
-	padding: 10%;
-	color: red;
 }
 .texim{
 	display: inline-block;
     padding-top: 3%;
     color: #73B7FF;
     font-size: 2.7rem;
+}
+.ser{
+	border-radius: 50%;
+	padding: 2%;
+	border: 1px solid #61C2FC;
 }
 .im{
 	width: 40%;
@@ -70,4 +70,57 @@
 
 .tamr{
 	font-size: 1.5em;
+}
+/*Efectos*/
+.move{
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+.move:hover{
+  border-radius: 50%;
+  -webkit-transform: rotate(360deg);
+     -moz-transform: rotate(360deg);
+       -o-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+.move{
+  	-webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+.move:hover{
+  	border-radius: 50%;
+  	background-color: red;
+  	-webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+.focus {
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+
+.focus:hover {
+  border: 70px solid #000;
+  border-radius: 50%;
+}
+.ef{
+    border: 2px solid #ccc;
+    -webkit-transition: margin 0.5s ease-out;
+    -moz-transition: margin 0.5s ease-out;
+    -o-transition: margin 0.5s ease-out;
+}
+.ef:hover {
+    margin-top: 2%;
 }
