--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 	background-image: url("../image/large.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+
 }
 .texim{
 	display: inline-block;
@@ -28,7 +29,7 @@
 	width: 100%;
 }
 .navbar .navbar-toggle .icon-bar {
-  background-color: # ff0000;
+  background-color: #fff;
 }
 .sec2{
 	background-image: url("../image/sec-2.jpg");
@@ -47,6 +48,10 @@
 }
 .azulback{
 	background-color: #0369B9;
+}
+.transparente{
+  background:  rgba(0, 102, 255, 0.3);
+  padding-top: 2%;
 }
 .marback{
 	background-color: #080A29;
@@ -72,6 +77,12 @@
 
 .tamr{
 	font-size: 1.5em;
+}
+.pb-2{
+  padding-bottom: 2%;
+}
+.pt-2{
+  padding-top: 2%;
 }
 /*Efectos*/
 .move{
@@ -105,18 +116,6 @@
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
 }
-.focus {
-  -webkit-transition: all 1s ease;
-     -moz-transition: all 1s ease;
-       -o-transition: all 1s ease;
-      -ms-transition: all 1s ease;
-          transition: all 1s ease;
-}
-
-.focus:hover {
-  border: 70px solid #000;
-  border-radius: 50%;
-}
 .ef{
     border: 2px solid #ccc;
     -webkit-transition: margin 0.5s ease-out;
@@ -125,4 +124,14 @@
 }
 .ef:hover {
     margin-top: 2%;
+}
+
+.social{
+  font-size: 2em;
+}
+
+/*Video responsive */
+iframe{
+  width: 100%;
+  height: 315px; 
 }
