--- a/css/queries.css
+++ b/css/queries.css
@@ -2,5 +2,12 @@
     .sec2{
     	padding: 20%;
     }
-
+    iframe{
+  		width: 100%;
+  		height: 200px; 
+    }
+    .pd{
+    	font-size: 1.2em;
+    	text-align: center;
+    }
 }
