--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ iframe{
   width: 100%;
   height: 315px; 
 }
-
+/*Arreglo del  modal*/
 #mdialTamanio{
   width: 80% !important;
   margin-left: 10%;
